--- a/manifest.json
+++ b/manifest.json
@@ -16,8 +16,13 @@
         "js": ["jquery-3.3.1.slim.min.js", "version-ninja.js"]
     }],
 
+    "options_ui": {
+        "page": "options.html"
+    },
+
     "permissions": [
-        "clipboardWrite"
+        "clipboardWrite",
+        "storage"
     ]
 
 }
